libkuzu/kuzu.h

struct ArrowSchema {
    const char* format;
    const char* name;
    const char* metadata;
    int64_t flags;
    int64_t n_children;
    struct ArrowSchema** children;
    struct ArrowSchema* dictionary;
    void (*release)(struct ArrowSchema*);
    void* private_data;
};
struct ArrowArray {
    int64_t length;
    int64_t null_count;
    int64_t offset;
    int64_t n_buffers;
    int64_t n_children;
    const void** buffers;
    struct ArrowArray** children;
    struct ArrowArray* dictionary;
    void (*release)(struct ArrowArray*);
    void* private_data;
};
typedef struct {
    void* _query_result;
    bool _is_owned_by_cpp;
} kuzu_query_result;
typedef struct {
    void* _flat_tuple;
    bool _is_owned_by_cpp;
} kuzu_flat_tuple;
typedef struct {
    void* _data_type;
} kuzu_logical_type;
typedef struct {
    void* _value;
    bool _is_owned_by_cpp;
} kuzu_value;
typedef struct {
    uint64_t table_id;
    uint64_t offset;
} kuzu_internal_id_t;
typedef struct {
    int32_t days;
} kuzu_date_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ns_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ms_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_sec_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_tz_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_t;
typedef struct {
    int32_t months;
    int32_t days;
    int64_t micros;
} kuzu_interval_t;
typedef struct {
    void* _query_summary;
} kuzu_query_summary;
typedef struct {
    uint64_t low;
    int64_t high;
} kuzu_int128_t;
typedef enum {
    KUZU_ANY = 0,
    KUZU_NODE = 10,
    KUZU_REL = 11,
    KUZU_RECURSIVE_REL = 12,
    KUZU_SERIAL = 13,
    KUZU_BOOL = 22,
    KUZU_INT64 = 23,
    KUZU_INT32 = 24,
    KUZU_INT16 = 25,
    KUZU_INT8 = 26,
    KUZU_UINT64 = 27,
    KUZU_UINT32 = 28,
    KUZU_UINT16 = 29,
    KUZU_UINT8 = 30,
    KUZU_INT128 = 31,
    KUZU_DOUBLE = 32,
    KUZU_FLOAT = 33,
    KUZU_DATE = 34,
    KUZU_TIMESTAMP = 35,
    KUZU_TIMESTAMP_SEC = 36,
    KUZU_TIMESTAMP_MS = 37,
    KUZU_TIMESTAMP_NS = 38,
    KUZU_TIMESTAMP_TZ = 39,
    KUZU_INTERVAL = 40,
    KUZU_DECIMAL = 41,
    KUZU_INTERNAL_ID = 42,
    KUZU_STRING = 50,
    KUZU_BLOB = 51,
    KUZU_LIST = 52,
    KUZU_ARRAY = 53,
    KUZU_STRUCT = 54,
    KUZU_MAP = 55,
    KUZU_UNION = 56,
    KUZU_POINTER = 58,
    KUZU_UUID = 59
} kuzu_data_type_id;
typedef enum { KuzuSuccess = 0, KuzuError = 1 } kuzu_state;
KUZU_C_API kuzu_state kuzu_query_result_get_query_summary(kuzu_query_result* query_result,
    kuzu_query_summary* out_query_summary);
KUZU_C_API kuzu_state kuzu_query_result_get_next_query_result(kuzu_query_result* query_result,
    kuzu_query_result* out_next_query_result);
KUZU_C_API char* kuzu_query_result_to_string(kuzu_query_result* query_result);
KUZU_C_API void kuzu_query_result_reset_iterator(kuzu_query_result* query_result);
KUZU_C_API kuzu_state kuzu_query_result_get_arrow_schema(kuzu_query_result* query_result,
    struct ArrowSchema* out_schema);
KUZU_C_API kuzu_state kuzu_query_result_get_next_arrow_chunk(kuzu_query_result* query_result,
    int64_t chunk_size, struct ArrowArray* out_arrow_array);
KUZU_C_API void kuzu_flat_tuple_destroy(kuzu_flat_tuple* flat_tuple);
KUZU_C_API kuzu_state kuzu_flat_tuple_get_value(kuzu_flat_tuple* flat_tuple, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API char* kuzu_flat_tuple_to_string(kuzu_flat_tuple* flat_tuple);
KUZU_C_API void kuzu_data_type_create(kuzu_data_type_id id, kuzu_logical_type* child_type,
    uint64_t num_elements_in_array, kuzu_logical_type* out_type);
KUZU_C_API void kuzu_data_type_clone(kuzu_logical_type* data_type, kuzu_logical_type* out_type);
KUZU_C_API void kuzu_data_type_destroy(kuzu_logical_type* data_type);
KUZU_C_API bool kuzu_data_type_equals(kuzu_logical_type* data_type1, kuzu_logical_type* data_type2);
KUZU_C_API kuzu_data_type_id kuzu_data_type_get_id(kuzu_logical_type* data_type);
KUZU_C_API kuzu_state kuzu_data_type_get_num_elements_in_array(kuzu_logical_type* data_type,
    uint64_t* out_result);
KUZU_C_API kuzu_value* kuzu_value_create_null();
KUZU_C_API kuzu_value* kuzu_value_create_null_with_data_type(kuzu_logical_type* data_type);
KUZU_C_API bool kuzu_value_is_null(kuzu_value* value);
KUZU_C_API void kuzu_value_set_null(kuzu_value* value, bool is_null);
KUZU_C_API kuzu_value* kuzu_value_create_default(kuzu_logical_type* data_type);
KUZU_C_API kuzu_value* kuzu_value_create_bool(bool val_);
KUZU_C_API kuzu_value* kuzu_value_create_int8(int8_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_int16(int16_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_int32(int32_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_int64(int64_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_uint8(uint8_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_uint16(uint16_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_uint32(uint32_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_uint64(uint64_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_int128(kuzu_int128_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_float(float val_);
KUZU_C_API kuzu_value* kuzu_value_create_double(double val_);
KUZU_C_API kuzu_value* kuzu_value_create_internal_id(kuzu_internal_id_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_date(kuzu_date_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_timestamp_ns(kuzu_timestamp_ns_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_timestamp_ms(kuzu_timestamp_ms_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_timestamp_sec(kuzu_timestamp_sec_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_timestamp_tz(kuzu_timestamp_tz_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_timestamp(kuzu_timestamp_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_interval(kuzu_interval_t val_);
KUZU_C_API kuzu_value* kuzu_value_create_string(const char* val_);
KUZU_C_API kuzu_state kuzu_value_create_list(uint64_t num_elements, kuzu_value** elements,
    kuzu_value** out_value);
KUZU_C_API kuzu_state kuzu_value_create_struct(uint64_t num_fields, const char** field_names,
    kuzu_value** field_values, kuzu_value** out_value);
KUZU_C_API kuzu_state kuzu_value_create_map(uint64_t num_fields, kuzu_value** keys,
    kuzu_value** values, kuzu_value** out_value);
KUZU_C_API void kuzu_value_get_data_type(kuzu_value* value, kuzu_logical_type* out_type);
KUZU_C_API kuzu_state kuzu_value_get_bool(kuzu_value* value, bool* out_result);
KUZU_C_API kuzu_state kuzu_value_get_int8(kuzu_value* value, int8_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_int16(kuzu_value* value, int16_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_int32(kuzu_value* value, int32_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_int64(kuzu_value* value, int64_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_uint8(kuzu_value* value, uint8_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_uint16(kuzu_value* value, uint16_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_uint32(kuzu_value* value, uint32_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_uint64(kuzu_value* value, uint64_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_int128(kuzu_value* value, kuzu_int128_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_float(kuzu_value* value, float* out_result);
KUZU_C_API kuzu_state kuzu_value_get_double(kuzu_value* value, double* out_result);
KUZU_C_API kuzu_state kuzu_value_get_internal_id(kuzu_value* value, kuzu_internal_id_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_date(kuzu_value* value, kuzu_date_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_timestamp(kuzu_value* value, kuzu_timestamp_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_timestamp_ns(kuzu_value* value,
    kuzu_timestamp_ns_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_timestamp_ms(kuzu_value* value,
    kuzu_timestamp_ms_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_timestamp_sec(kuzu_value* value,
    kuzu_timestamp_sec_t* out_result);