KuzuDot/Native/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_next_query_result(ref KuzuQueryResult queryResult,
            out KuzuQueryResult outNextQueryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_query_result_to_string(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_query_result_reset_iterator(ref KuzuQueryResult queryResult);

        // New: Query summary & Arrow interoperability
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_query_summary(ref KuzuQueryResult queryResult,
            out KuzuQuerySummary outQuerySummary);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_arrow_schema(ref KuzuQueryResult queryResult,
            out ArrowSchema outSchema);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_next_arrow_chunk(ref KuzuQueryResult queryResult,
            long chunkSize, out ArrowArray outArrowArray);

        // FlatTuple functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_flat_tuple_destroy(ref KuzuFlatTuple flatTuple);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_flat_tuple_get_value(ref KuzuFlatTuple flatTuple, ulong index, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_flat_tuple_to_string(ref KuzuFlatTuple flatTuple);

        // DataType functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_data_type_create(KuzuDataTypeId id, ref KuzuLogicalTypeNative childType,
            ulong numElementsInArray, out KuzuLogicalTypeNative outType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_data_type_clone(ref KuzuLogicalTypeNative dataType, out KuzuLogicalTypeNative outType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_data_type_destroy(ref KuzuLogicalTypeNative dataType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_data_type_equals(ref KuzuLogicalTypeNative dataType1, ref KuzuLogicalTypeNative dataType2);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuDataTypeId kuzu_data_type_get_id(ref KuzuLogicalTypeNative dataType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_data_type_get_num_elements_in_array(ref KuzuLogicalTypeNative dataType, out ulong outResult);

        // Value creation functions - all data types
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_null();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_null_with_data_type(ref KuzuLogicalTypeNative dataType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_default(ref KuzuLogicalTypeNative dataType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_bool(bool value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_int8(sbyte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_int16(short value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_int32(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_int64(long value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_uint8(byte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_uint16(ushort value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_uint32(uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_uint64(ulong value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_int128(KuzuInt128 value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_float(float value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_double(double value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_internal_id(KuzuInternalIdNative value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_date(KuzuDate value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_timestamp(KuzuTimestamp value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_timestamp_ns(KuzuTimestampNs value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_timestamp_ms(KuzuTimestampMs value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_timestamp_sec(KuzuTimestampSec value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_timestamp_tz(KuzuTimestampTz value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_create_interval(KuzuInterval value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern IntPtr kuzu_value_create_string([MarshalAs(UnmanagedType.LPStr)] string value);

        // Collections / structured value creation
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_create_list(ulong numElements, IntPtr elements /* kuzu_value** */, out IntPtr outValue /* kuzu_value** */);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_create_struct(ulong numFields, IntPtr fieldNames /* const char** */, IntPtr fieldValues /* kuzu_value** */, out IntPtr outValue /* kuzu_value** */);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_create_map(ulong numFields, IntPtr keys /* kuzu_value** */, IntPtr values /* kuzu_value** */, out IntPtr outValue /* kuzu_value** */);

        // Value accessor functions - adding safety checks for IntPtr validation
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_value_is_null(IntPtr value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_value_set_null(IntPtr value, bool isNull);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_value_get_data_type(IntPtr value, out KuzuLogicalTypeNative outType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_bool(IntPtr value, out bool outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_int8(IntPtr value, out sbyte outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_int16(IntPtr value, out short outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_int32(IntPtr value, out int outResult);

        // Fixed: Ensure proper marshaling for int64 to prevent memory access violations
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_int64(IntPtr value, out long outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_uint8(IntPtr value, out byte outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_uint16(IntPtr value, out ushort outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_uint32(IntPtr value, out uint outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_uint64(IntPtr value, out ulong outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_int128(IntPtr value, out KuzuInt128 outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_float(IntPtr value, out float outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_double(IntPtr value, out double outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_internal_id(IntPtr value, out KuzuInternalIdNative outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_date(IntPtr value, out KuzuDate outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_timestamp(IntPtr value, out KuzuTimestamp outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_timestamp_ns(IntPtr value, out KuzuTimestampNs outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_timestamp_ms(IntPtr value, out KuzuTimestampMs outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_timestamp_sec(IntPtr value, out KuzuTimestampSec outResult);
